--- a/about/index.html
+++ b/about/index.html
@@ -93,16 +93,15 @@ and at various <a href="/work/">companies</a> but …<em>looks at script</em>…
 <li>Core Units: DSA, OOP, Algos</li>
 </ul>
 <h3 id="fun-facts-and-hobbies" style="position:relative;"><a href="#fun-facts-and-hobbies" aria-label="fun facts and hobbies permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>Fun facts and hobbies:</h3>
-<p>I love playing TFT and Valorant casually with friends - you can see my piss poor ranks below</p>
+<p>I love playing TFT and Valorant casually with friends - you can see my piss poor ranks below (TBC)</p>
 <ul>
-<li>also love Overwatch – peaked Master rank as support in 2018; stopped playing when Overwatch 2 came out.
+<li>also love Overwatch, peaked Master rank as support in 2018 but stopped playing when Overwatch 2 came out
 <ul>
-<li>I also played in casual tournaments (Open Division 2018) and almost made it to OCE Contenders qualifiers (top 16 in OCE).</li>
+<li>also played in casual tournaments (Open Division 2018) and almost made it to OCE Contenders qualifiers (top 16 in OCE)</li>
 </ul>
 </li>
 <li>I LOVE ARCANE!! (made an arcane s2 countdown <a href="https://kayleecragg.github.io/arcane/" target="_blank" rel="nofollow noopener noreferrer">here</a>)</li>
-<li><strong>Fun fact:</strong> I met Katie Leung in 2022 during supanova, which was the best and most exciting celebrity encounter of my life</li>
-<li>Riot i am pretty sure i’ve spent over $3000 on all of your merch.. im very sure please hire me</li>
+<li><strong>Fun fact:</strong> I met Katie Leung in 2022 during supanova, which was <em>the</em> most exciting celebrity encounter of my life</li>
 </ul></div></div></div></div></div></div><div id="gatsby-announcer" style="position:absolute;top:0;width:1px;height:1px;padding:0;overflow:hidden;clip:rect(0, 0, 0, 0);white-space:nowrap;border:0" aria-live="assertive" aria-atomic="true"></div></div><script id="gatsby-script-loader">/*<![CDATA[*/window.pagePath="/about/";/*]]>*/</script><!-- slice-start id="_gatsby-scripts-1" -->
           <script
             id="gatsby-chunk-mapping"
