--- a/work/index.html
+++ b/work/index.html
@@ -84,25 +84,34 @@ System Level Development on Integration Team.<br>
 <strong>Technologies:</strong> Python, C, Kotlin, Linux, Bash</p>
 <h3 id="google" style="position:relative;"><a href="#google" aria-label="google permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>Google</h3>
 <p><span style="color:gray">Customer Engineering Intern | Jun 2024 - Aug 2024</span><br>
-During my time at Google, I developed and showcased three generative AI applications for clients under Google Cloud, as well as participated and presented in an internal Google‑wide AI hackathon.
-Additionally, I was awarded a recognition peer bonus award for contributing to the creation of Vertex Search dataset for Agents API launch.
+During my time at Google, I developed and showcased three generative AI applications for clients under Google Cloud as well as participated and presented in an internal Google‑wide AI hackathon.
+<a href="https://www.linkedin.com/posts/hniko_skillsignitionsg-traineeshipprogram-googlesingapore-activity-7255507638682058752-4UJM?utm_source=share&#x26;utm_medium=member_desktop&#x26;rcm=ACoAAA4L5rAB0JBTosWXTfKoVtXn1mm9cMEOF2M" target="_blank" rel="nofollow noopener noreferrer"><em>(see)</em></a></p>
+<p>Additionally, I was awarded a recognition peer bonus award for contributing to the creation of Vertex Search dataset for Agents API launch.<br>
 <strong>Technologies:</strong> Python, Streamlit, React, Flask, GCP, Gemini, Docker, Git</p>
 <h3 id="deloitte" style="position:relative;"><a href="#deloitte" aria-label="deloitte permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>Deloitte</h3>
 <p><span style="color:gray">Cloud &#x26; Engineering Intern | Nov 2023 - Feb 2024</span><br>
-In collaboration with another intern, I developed a Python script to streamline extraction of individual operations from a large WSDL file into smaller XML files, optimizing compatibility and performance for Azure API management system.<br>
+In collaboration with another intern, I developed a Python script to streamline extraction of individual operations from a large WSDL file into smaller XML files, optimizing compatibility and performance for Azure API management system.
+<a href="https://www.linkedin.com/posts/harrysalvesen_serverless-cloud-deloitte-activity-7164828039195844608-olMx?utm_source=share&#x26;utm_medium=member_desktop&#x26;rcm=ACoAAA4L5rAB0JBTosWXTfKoVtXn1mm9cMEOF2M" target="_blank" rel="nofollow noopener noreferrer"><em>(see)</em></a>
+<br>
 <strong>Technologies:</strong> Python, Azure APIM, Git</p>
+<hr>
 <h3 id="stan" style="position:relative;"><a href="#stan" aria-label="stan permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>Stan</h3>
 <p><span style="color:gray">Live Operations Assistant | Jul 2022 - Mar 2027</span><br>
-Designed and implemented a set of Jupyter notebooks utilizing Python, Selenium, Puppeteer, Google Sheets API and Google Colab to automate the creation and uploading of shells/assets and platform images, enhancing workflow efficiency and reducing human rate of error tenfold.<br>
-<strong>Technologies:</strong> Python, Selenium, Google Colab, Google Sheets API, Git</p>
+This role was also mainly broadcasting, where I was responsible for the live‐streaming and VOD delivery for events with up to 300k+ live viewers, but I also completed several side quests:</p>
+<ul>
+<li>designed and implemented a set of Jupyter notebooks utilizing Python, Selenium, Puppeteer, Google Sheets API and Google Colab to automate the creation and uploading of shells/assets and platform images, enhancing workflow efficiency and reducing human rate of error tenfold.</li>
+<li>Optimized an existing Google Sheets workflow by integrating advanced formulas, enhancing time efficiency by 471%.</li>
+<li>Trained new staff on operational workflows.</li>
+</ul>
+<p><strong>Technologies:</strong> Python, Selenium, Google Colab, Google Sheets API, Git</p>
 <h3 id="nine" style="position:relative;"><a href="#nine" aria-label="nine permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>Nine</h3>
 <p><span style="color:gray">Associate Producer | Jan 2022 - Sep 2022</span><br>
-As an associate producer, my role mainly required me to edit VODs and media content for the 9Now platform using Adobe Premiere Pro and Photoshop. O
-ive‐streaming events such as Australian Open 2022 and 19th FINA World Championships Budapest 2022.<br>
+As an associate producer, my role mainly required me to edit VODs and media content for the 9Now platform using Premiere Pro and Photoshop.<br>
+Also had the pleasure to live‐stream events such as the Australian Open 2022 and the 19th FINA World Championships Budapest 2022.<br>
 <strong>Technologies:</strong> Adobe Premiere Pro, Adobe Photoshop</p>
 <h3 id="telstra-broadcast-services" style="position:relative;"><a href="#telstra-broadcast-services" aria-label="telstra broadcast services permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>Telstra Broadcast Services</h3>
 <p><span style="color:gray">Presentation Coordinator | Sep 2021 - Jan 2022</span><br>
-For this role I was responsible for the playout and on-air presentation of all SBS Australia channels, Viceland, TVSN AU/NZ, EXPO, ICTV, broadcast streams using Cinergy Air. I also switched events such as UCI Cycling 2021 (Belgium) and NBA 2021/2022 season live matches.<br>
+For this role I was responsible for the playout and on-air presentation of all SBS Australia channels, Viceland, TVSN AU/NZ, EXPO, ICTV, broadcast streams using Cinergy Air.<br>I also switched events such as UCI Cycling 2021 (Belgium) and NBA 2021/2022 season live matches.<br>
 <strong>Technologies:</strong> Real-time Transport Protocol (RTP), IP Playout System</p></div></div></div></div></div></div><div id="gatsby-announcer" style="position:absolute;top:0;width:1px;height:1px;padding:0;overflow:hidden;clip:rect(0, 0, 0, 0);white-space:nowrap;border:0" aria-live="assertive" aria-atomic="true"></div></div><script id="gatsby-script-loader">/*<![CDATA[*/window.pagePath="/work/";/*]]>*/</script><!-- slice-start id="_gatsby-scripts-1" -->
           <script
             id="gatsby-chunk-mapping"
