--- a/about/index.html
+++ b/about/index.html
@@ -85,7 +85,7 @@
     >
       <a
     class="gatsby-resp-image-link"
-    href="/kaylees-website/static/b8b08a71540ef5eeda76408524819ba1/c1b63/image.png"
+    href="/static/b8b08a71540ef5eeda76408524819ba1/c1b63/image.png"
     style="display: block"
     target="_blank"
     rel="noopener"
@@ -96,24 +96,24 @@
   ></span>
   <picture>
           <source
-              srcset="/kaylees-website/static/b8b08a71540ef5eeda76408524819ba1/8ac56/image.webp 240w,
-/kaylees-website/static/b8b08a71540ef5eeda76408524819ba1/d3be9/image.webp 480w,
-/kaylees-website/static/b8b08a71540ef5eeda76408524819ba1/e46b2/image.webp 960w,
-/kaylees-website/static/b8b08a71540ef5eeda76408524819ba1/92f8c/image.webp 1200w"
+              srcset="/static/b8b08a71540ef5eeda76408524819ba1/8ac56/image.webp 240w,
+/static/b8b08a71540ef5eeda76408524819ba1/d3be9/image.webp 480w,
+/static/b8b08a71540ef5eeda76408524819ba1/e46b2/image.webp 960w,
+/static/b8b08a71540ef5eeda76408524819ba1/92f8c/image.webp 1200w"
               sizes="(max-width: 960px) 100vw, 960px"
               type="image/webp"
             />
           <source
-            srcset="/kaylees-website/static/b8b08a71540ef5eeda76408524819ba1/8ff5a/image.png 240w,
-/kaylees-website/static/b8b08a71540ef5eeda76408524819ba1/e85cb/image.png 480w,
-/kaylees-website/static/b8b08a71540ef5eeda76408524819ba1/d9199/image.png 960w,
-/kaylees-website/static/b8b08a71540ef5eeda76408524819ba1/c1b63/image.png 1200w"
+            srcset="/static/b8b08a71540ef5eeda76408524819ba1/8ff5a/image.png 240w,
+/static/b8b08a71540ef5eeda76408524819ba1/e85cb/image.png 480w,
+/static/b8b08a71540ef5eeda76408524819ba1/d9199/image.png 960w,
+/static/b8b08a71540ef5eeda76408524819ba1/c1b63/image.png 1200w"
             sizes="(max-width: 960px) 100vw, 960px"
             type="image/png"
           />
           <img
             class="gatsby-resp-image-image"
-            src="/kaylees-website/static/b8b08a71540ef5eeda76408524819ba1/d9199/image.png"
+            src="/static/b8b08a71540ef5eeda76408524819ba1/d9199/image.png"
             alt="alt text"
             title=""
             loading="lazy"
@@ -124,8 +124,8 @@
   </a>
     </span></p>
 <p>I am currently an undergraduate pursuing a Bachelor of Computer Science at the University of New South Wales (UNSW), expecting to graduate by <strong>2026</strong>.</p>
-<p>In the past, I have worked on various <a href="/kaylees-website/">projects</a>
-and at various <a href="/kaylees-website/work/">companies</a>.</p>
+<p>In the past, I have worked on various <a href="/">projects</a>
+and at various <a href="/work/">companies</a>.</p>
 <p>Right now, I’m self learning C++.</p>
 <hr>
 <h4 id="fun-facts-and-hobbies" style="position:relative;"><a href="#fun-facts-and-hobbies" aria-label="fun facts and hobbies permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>Fun facts and hobbies:</h4>
